--- a/app/globals.css
+++ b/app/globals.css
@@ -18,19 +18,19 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  @apply text-2xl py-4;
+  @apply text-2xl pb-4;
 }
 
 h2 {
-  @apply text-xl py-4;
+  @apply text-xl pb-4;
 }
 
 h3 {
-  @apply text-lg py-2;
+  @apply text-lg pb-2;
 }
 
 h4 {
-  @apply text-base py-2;
+  @apply text-base pb-2;
 }
 
 h5 {
